# formula-inter

./: .gitignore  Cargo.toml  README.md  line.fi  right.fi  testing_file.fi
src/: main.rs  test.rs
src/tests/: analex_test.rs  files_test.rs  mod.rs  semantics_test.rs  syntax_test.rs
src/utils/: eval.rs  evalution.rs  lexer.rs  lexing.rs  mod.rs  semanter.rs  semanting.rs  syntaxing.rs  tokenizer.rs  tokens.rs
