[package]
name = "formula-inter"
version = "0.1.0"
authors = ["Anthony <anthony.christoforou@etu.unige.ch>", "Ethan <ethan.arm@etu.unige.ch>"]
description = "A formula interpreter"
readme = "README.md"
repository = "https://github.com/hectellian/formula-inter"
license = "GNU General Public License v3.0"
keywords = ["formula", "interpreter"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
